<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login_fragment.LoginFragment"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/titleStyle"
        android:text="@string/titleApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="248dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:padding="@dimen/smallMargin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/smallMargin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="44dp"
        android:layout_height="50dp"
        android:src="@drawable/password_logo"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@color/white"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword"
        android:padding="@dimen/smallMargin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="147dp"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:text="LoginRegistro"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="50dp"
        android:src="@drawable/email_logo"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEmail"
        app:layout_constraintEnd_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toTopOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/lightBlue"
        android:textSize="@dimen/commonTextSize"
        android:layout_marginTop="@dimen/smallMargin"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="126dp"
        android:layout_height="264dp"
        android:scaleType="centerCrop"
        android:src="@drawable/rudeus"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/editTextEmail"/>
</androidx.constraintlayout.widget.ConstraintLayout>