<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <ImageView
        android:id="@+id/imgArventure"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginStart="@dimen/commonMargin"
        android:layout_marginTop="@dimen/commonMargin"
        android:src="@drawable/img_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/commonMargin"
        android:fontFamily="@font/elianto_regular"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/commonTextSize"
        app:layout_constraintStart_toEndOf="@id/imgArventure"
        app:layout_constraintTop_toTopOf="@id/imgArventure" />

    <TextView
        android:id="@+id/tvTitleContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/minMargin"
        android:textColor="@color/white"
        android:textSize="@dimen/commonTextSize"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="Un título cualquiera" />

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonMargin"
        android:fontFamily="@font/elianto_regular"
        android:text="@string/distance"
        android:textColor="@color/white"
        android:textSize="@dimen/commonTextSize"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitleContent" />

    <TextView
        android:id="@+id/tvDistanceContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/minMargin"
        android:text="@string/distance"
        android:textColor="@color/white"
        android:textSize="@dimen/commonTextSize"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvDistance" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonMargin"
        android:fontFamily="@font/elianto_regular"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="@dimen/commonTextSize"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvDistanceContent" />

    <TextView
        android:id="@+id/tvTimeContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/minMargin"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="@dimen/commonTextSize"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTime" />

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonMargin"
        android:fontFamily="@font/elianto_regular"
        android:text="@string/summary"
        android:textColor="@color/white"
        android:textSize="@dimen/commonTextSize"
        app:layout_constraintStart_toStartOf="@id/imgArventure"
        app:layout_constraintTop_toBottomOf="@id/imgArventure" />

    <TextView
        android:id="@+id/tvSummaryContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/minMargin"
        android:text="@string/summary"
        android:textColor="@color/white"
        android:textSize="@dimen/commonTextSize"
        app:layout_constraintStart_toStartOf="@id/imgArventure"
        app:layout_constraintTop_toBottomOf="@id/tvSummary"
        tools:text="sdasd asdasdasd asdasdasd asdasd asdas dasdasd asd asdasd asdasd asdasd asdasd asdasd asdasd  asdasd asdasd asdasd  asdasd asd asdasd asd asd" />
</androidx.constraintlayout.widget.ConstraintLayout>