<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagen_fondo2"
    tools:context=".ui.detail_arventure_fragment.DetailArventureFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/background_gradient"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/arventureTitle"
                    style="@style/titleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/titleArventure"
                    android:textSize="35sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_gradient"
                android:orientation="vertical"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgArventure"
                        android:layout_width="350dp"
                        android:layout_height="230dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/aventura2" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smallMargin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/distancia" />

                    <TextView
                        android:id="@+id/distanceArventure"
                        style="@style/appTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/smallMargin"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/distanceArventure" />


                    <TextView
                        android:id="@+id/minutesArventure"
                        style="@style/appTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="@dimen/smallMargin"
                        android:layout_weight="1"
                        android:text="@string/minutesArventure"
                        android:textAlignment="textEnd" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/cronografo" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smallMargin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/mapa" />

                    <TextView
                        style="@style/appTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/smallMargin"
                        android:layout_weight="1"
                        android:fontFamily="@font/elianto_regular"
                        android:text="@string/originArventure" />

                    <TextView
                        android:id="@+id/originArventure"
                        style="@style/appTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Plaza Cataluña" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smallMargin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/historia" />

                    <TextView
                        style="@style/appTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/smallMargin"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/elianto_regular"
                        android:text="@string/storyArventure" />

                    <TextView
                        android:id="@+id/storyNameArventure"
                        style="@style/appTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Nombre de la historia" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_gradient"
                android:orientation="vertical"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="@dimen/smallMargin"
                    android:orientation="vertical">

                    <TextView
                        style="@style/appTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/elianto_regular"
                        android:text="@string/summaryArventure"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/summaryArventure"
                        style="@style/appTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/resumen"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="155dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/background_gradient"
                android:fontFamily="@font/elianto_regular"
                android:gravity="center"
                android:text="JUGAR"
                android:textColor="#F2B366"
                android:textSize="@dimen/subtitleSize"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</ScrollView>